apps/goatlint/src/snapshots/fixtures__cli__tsgolint_--type-aware --silent@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --type-aware --silent
working directory: fixtures/cli/tsgolint
----------

Found 0 warnings and 82 errors.
Finished in <variable>ms on 60 files with 59 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
