apps/goatlint/src/snapshots/fixtures__cli__tsgolint_--type-aware test.svelte@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --type-aware test.svelte
working directory: fixtures/cli/tsgolint
----------

  x eslint(no-debugger): `debugger` statement is not allowed
   ,-[test.svelte:2:2]
 1 | <script>
 2 |     debugger;
   :     ^^^^^^^^^
 3 | 
   `----
  help: Remove the debugger statement

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file with 59 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
